--- a/Views/Book/Index.cshtml
+++ b/Views/Book/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<BookCrossingApp.Models.Book>
+﻿@using BookCrossingApp.Data.Enum
+@model IEnumerable<BookCrossingApp.Models.Book>
 
 @{
     ViewData["Title"] = "Index";
@@ -22,7 +23,7 @@
                 @Html.DisplayNameFor(model => model.Author)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CategoryID)
+                Category
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Description)
@@ -30,6 +31,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Status)
             </th>
+            <th></th>
+            <th></th>
+            <th></th>
             <th></th>
         </tr>
     </thead>
@@ -55,12 +59,17 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Status)
                 </td>
+               
                 <td>
-                    <a asp-action="PlaceBook" asp-route-id="@item.Id">Place</a> |
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    @if (item.Status != BookStatus.OnMap)
+                    {
+                        <a asp-action="PlaceBook" asp-route-id="@item.Id">Place</a>
+                    }
                 </td>
+                <td><a asp-action="Edit" asp-route-id="@item.Id">Edit</a> </td>
+                <td><a asp-action="Details" asp-route-id="@item.Id">Details</a> </td>
+                <td><a asp-action="Delete" asp-route-id="@item.Id">Delete</a></td>
+                
             </tr>
         }
     </tbody>
