--- a/Views/Home/AllBooks.cshtml
+++ b/Views/Home/AllBooks.cshtml
@@ -1,69 +1,68 @@
 ﻿@section Head{
     <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
     <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
+    <script src="https://unpkg.com/ol-popup@4.0.0"></script>
+    <link rel="stylesheet" href="https://unpkg.com/ol-popup@4.0.0/src/ol-popup.css" />
 }
-    <style>
-        .map {
-            height: 400px;
-            width: 100%;
-        }
+<style>
+    .map {
+        height: 400px;
+        width: 100%;
+    }
 
-        .ol-popup {
+    .ol-popup {
+        position: absolute;
+        background-color: white;
+        box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+        padding: 15px;
+        border-radius: 10px;
+        border: 1px solid #cccccc;
+        bottom: 12px;
+        left: -50px;
+        min-width: 280px;
+    }
+
+        .ol-popup:after, .ol-popup:before {
+            top: 100%;
+            border: solid transparent;
+            content: " ";
+            height: 0;
+            width: 0;
             position: absolute;
-            background-color: white;
-            box-shadow: 0 1px 4px rgba(0,0,0,0.2);
-            padding: 15px;
-            border-radius: 10px;
-            border: 1px solid #cccccc;
-            bottom: 12px;
-            left: -50px;
-            min-width: 280px;
+            pointer-events: none;
         }
 
-            .ol-popup:after, .ol-popup:before {
-                top: 100%;
-                border: solid transparent;
-                content: " ";
-                height: 0;
-                width: 0;
-                position: absolute;
-                pointer-events: none;
-            }
-
-            .ol-popup:after {
-                border-top-color: white;
-                border-width: 10px;
-                left: 48px;
-                margin-left: -10px;
-            }
-
-            .ol-popup:before {
-                border-top-color: #cccccc;
-                border-width: 11px;
-                left: 48px;
-                margin-left: -11px;
-            }
-
-        .ol-popup-closer {
-            text-decoration: none;
-            position: absolute;
-            top: 2px;
-            right: 8px;
+        .ol-popup:after {
+            border-top-color: white;
+            border-width: 10px;
+            left: 48px;
+            margin-left: -10px;
         }
 
-            .ol-popup-closer:after {
-                content: "✖";
-            }
-    </style>
+        .ol-popup:before {
+            border-top-color: #cccccc;
+            border-width: 11px;
+            left: 48px;
+            margin-left: -11px;
+        }
 
-    <h2>Show all books</h2>
-    <div id="map" class="map"></div>
-   @* <div id="popup" class="ol-popup">
-        <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-        <div id="popup-content"></div>
-    </div>*@
+    .ol-popup-closer {
+        text-decoration: none;
+        position: absolute;
+        top: 2px;
+        right: 8px;
+    }
 
-    @section Scripts {
+        .ol-popup-closer:after {
+            content: "✖";
+        }
+</style>
+
+<h2>Show all books</h2>
+<div id="map" class="map"></div>
+
+
+@section Scripts {
     <script type="text/javascript">
         var layer = new ol.layer.Tile({
             source: new ol.source.OSM()
@@ -92,21 +91,32 @@
             })
         });
         map.addLayer(vectorLayer);
+      
+        const popup = new Popup();
+        map.addOverlay(popup);
 
-        //var data = [
-        //    {
-        //        "id": 1,
-        //        "longitude": 60.2,
-        //        "latitude": 30.3
-        //    },
-        //    {
-        //        "id": 2,
-        //        "longitude": 59.5,
-        //        "latitude": 30.5
-        //    }
-        //];
+        map.on('singleclick', function (event) {
+            if (map.hasFeatureAtPixel(event.pixel) === true) {
 
-        function createMarker(lng, lat, id) { 
+                const trailheads = map.getFeaturesAtPixel(event.pixel);
+
+                if (trailheads.length > 0) {
+
+                    const trailId = trailheads[0].get("id");
+                    var url = '/Book/GetByPlaceId/' + trailId;
+                    $.getJSON(url, function (data) {
+                        if (data != null) {
+                            popup.show(event.coordinate, `<b>${data.author}</b><br />${data.title}<br /><a href='#'>Take</a>`);
+                        }
+                    });
+                }
+            } else {
+                popup.hide();
+            }
+
+        });
+
+        function createMarker(lng, lat, id) {
             var flng = parseFloat(lng);
             var flat = parseFloat(lat);
             return new ol.Feature({
@@ -119,12 +129,14 @@
             var url = '/Place/GetBooksPlaces/'
             $.getJSON(url, function (data) {
                 for (let i = 0; i < data.length; i++) {
-                    vectorLayer.getSource().addFeature(createMarker(data[i].longitude, data[i].latitude, data[i].id));
+                    vectorLayer.getSource().addFeature(
+                        createMarker(data[i].longitude, data[i].latitude, data[i].id)
+                    );
                 }
-
             });
         }
 
+        
         getData();
     </script>
   }
