--- a/Views/Home/AllBooks.cshtml
+++ b/Views/Home/AllBooks.cshtml
@@ -6,7 +6,7 @@
 }
 <style>
     .map {
-        height: 400px;
+        height: 500px;
         width: 100%;
     }
 
@@ -106,7 +106,7 @@
                     var url = '/Book/GetByPlaceId/' + trailId;
                     $.getJSON(url, function (data) {
                         if (data != null) {
-                            popup.show(event.coordinate, `<b>${data.author}</b><br />${data.title}<br /><a href='#'>Take</a>`);
+                            popup.show(event.coordinate, `${data.author}<br /><b>${data.title}</b><br /><a href='/Place/Details/${trailId}'>Take</a>`);
                         }
                     });
                 }
