--- a/Views/Place/Details.cshtml
+++ b/Views/Place/Details.cshtml
@@ -1,10 +1,10 @@
-﻿@model BookCrossingApp.Models.Book
+﻿@model BookCrossingApp.ViewModels.BookPlaceViewModel
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Book Place Details</h1>
 
 <div>
     <h4>Book</h4>
@@ -28,9 +28,24 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Author)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.PlaceDescription)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PlaceDescription)
+        </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+    <form asp-action="TakeConfirmed">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Take" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to All Books</a>
+    </form>
+    
 </div>
