--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -55,7 +55,8 @@
             }
     </style>
 }
-    <h2>Home</h2>
+    <h2>Добро пожаловать на сервис свободного обмена книгами</h2>
+<h3>Карта доступных книг</h3>
     <div id="map" class="map"></div>
     <div id="popup" class="ol-popup">
         <a href="#" id="popup-closer" class="ol-popup-closer"></a>
