--- a/Views/User/Detail.cshtml
+++ b/Views/User/Detail.cshtml
@@ -33,14 +33,24 @@
             </div>
             <div class="row mb-4">
                 <div class="col">
-                    <h5>Username : </h5>
+                    <h5>Имя пользователя : </h5>
                     @Html.DisplayFor(modelItem => Model.UserName)
+                </div>
+            </div>
+
+            <div class="row mb-4">
+                <div class="col">
+                    <h5>Баллы : </h5>
+                    @Html.DisplayFor(modelItem => Model.Points)
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-12 col-md-8 order-md-1">
-                    <h5>Your books</h5>
+                    <h5>Ваши Книги :</h5>
+
+
+
                 </div>
             </div>
         </div>
