--- a/Views/Book/Create.cshtml
+++ b/Views/Book/Create.cshtml
@@ -1,12 +1,13 @@
-﻿@model BookCrossingApp.Models.Book
+﻿@using BookCrossingApp.Data.Enum
+@model BookCrossingApp.Models.Book
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Добавление новой книги</h1>
 
-<h4>Book</h4>
+<h4>Книга</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,29 +19,35 @@
                 <span asp-validation-for="BCID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
+                <label>Название</label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Author" class="control-label"></label>
+                <label>Автор</label>
                 <input asp-for="Author" class="form-control" />
                 <span asp-validation-for="Author" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
+                <label>Описание</label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label>Категория</label>
+                <select asp-for="CategoryID" asp-items="Html.GetEnumSelectList<BookCategories>()" class="form-control"></select>
+                <span asp-validation-for="CategoryID" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Сохранить" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад к списку книг</a>
 </div>
 
 @section Scripts {
