--- a/Views/Book/Edit.cshtml
+++ b/Views/Book/Edit.cshtml
@@ -1,47 +1,56 @@
-﻿@model BookCrossingApp.Models.Book
+﻿@using BookCrossingApp.Data.Enum
+@model BookCrossingApp.Models.Book
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Изменение данных о книге</h1>
 
-<h4>Book</h4>
+<h4>Введите данные требующие измения</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Status" />
+            <input type="hidden" asp-for="PictureName" />
+            <input type="hidden" asp-for="CreatorUserId" />
             <div class="form-group">
                 <label asp-for="BCID" class="control-label"></label>
                 <input asp-for="BCID" class="form-control" />
                 <span asp-validation-for="BCID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
+                <label>Название</label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Author" class="control-label"></label>
+                <label>Автор</label>
                 <input asp-for="Author" class="form-control" />
                 <span asp-validation-for="Author" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
+                <label>Описание</label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label>Категория</label>
+                <select asp-for="CategoryID" asp-items="Html.GetEnumSelectList<BookCategories>()" class="form-control"></select>
+                <span asp-validation-for="CategoryID" class="text-danger"></span>
             </div>
-        </form>
+            <div class="form-group">
+                <input type="submit" value="Сохранить" class="btn btn-primary" />
+            </div>
+            </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад к списку книг</a>
 </div>
 
 @section Scripts {
