--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -11,15 +11,65 @@
                             <tr class="bg-white">
                                 <th scope="row">
                                     <div class="media align-items-center">
-                                        <img alt="Image profile avatar" src="@user.ProfileImageUrl" class="avatar">
+                                        <img alt="Image profile avatar" src="@user.ProfileImageUrl" class="avatar" width="100" height="100">
                                         <div class="media-body">
                                             <span class="h6 mb-0">@user.UserName</span>
+                                        </div>
+                                        <div class="media-body">
+                                            <span class="h6 mb-0">
+                                                @if (user.isEnabled)
+                                                {
+                                                    <p style="color: rgb(1,206,50)">Активен</p>
+                                                }
+                                                else
+                                                {
+                                                    <p style="color: rgb(200,1,1)">Заблокирован</p>
+                                                }
+                                            </span>
+                                        </div>
+                                        <div class="media-body">
+                                            <span class="h6 mb-0">
+                                                @if (user.userRole == "admin")
+                                                {
+                                                    <p>Администратор</p>
+                                                }
+                                                else
+                                                {
+                                                    <p>Пользователь</p>
+                                                }
+                                            </span>
                                         </div>
                                     </div>
                                 </th>
                                 <td>
                                     <a class="btn btn-outline-primary" asp-controller="User" asp-action="Detail" asp-route-id="@user.Id">
-                                        View Profile
+                                        Профиль
+                                    </a>
+                                </td>
+                                <td>
+
+                                    <a class="btn btn-outline-primary" asp-controller="User" asp-action="ChangeStatus" asp-route-id="@user.Id">
+                                        @if (user.isEnabled)
+                                        {
+                                            <p>Заблокировать</p>
+                                        }
+                                        else
+                                        {
+                                            <p>Разблокировать</p>
+                                        }
+                                    </a>
+
+                                </td>
+                                <td>
+                                    <a class="btn btn-outline-primary" asp-controller="User" asp-action="ChangeRole" asp-route-id="@user.Id">
+                                    @if (user.userRole == "admin")
+                                    {
+                                            <p>Убрать из администраторов</p>  
+                                    }
+                                    else
+                                    {
+                                            <p>Сделать администратором</p>
+                                    }
                                     </a>
                                 </td>
                             </tr>
