--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -8,13 +8,13 @@
 <div class="row">
     <div class="col-md-6 offset-3">
         <p>
-        <h4>Sign up for a new account</h4>
+        <h4>Создайте аккаунт!</h4>
         </p>
 
         @if (TempData["Error"] != null)
         {
             <div class="col-md-12 alert alert-danger">
-                <span><b>Sorry!</b> - @TempData["Error"] </span>
+                <span><b>Извините!</b> - @TempData["Error"] </span>
             </div>
         }
 
@@ -24,23 +24,23 @@
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="form-group">
-                        <label asp-for="EmailAddress" class="control-label"></label>
+                        Адрес электронной почты
                         <input asp-for="EmailAddress" class="form-control" />
                         <span asp-validation-for="EmailAddress" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="Password" class="control-label"></label>
+                        Пароль
                         <input asp-for="Password" class="form-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="ConfirmPassword" class="control-label"></label>
+                        Потдвердите пароль
                         <input asp-for="ConfirmPassword" class="form-control" />
                         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
-                        <input class="btn btn-outline-success float-right" type="submit" value="Sign up" />
+                        <input class="btn btn-outline-success float-right" type="submit" value="Создать" />
                     </div>
                 </form>
             </div>
